--- a/Biblioteca.WebApi/appsettings.json
+++ b/Biblioteca.WebApi/appsettings.json
@@ -14,5 +14,6 @@
     "audience": "Publica",
     "accessExpiration": 30,
     "refreshExpiration": 60
-  }
+  },
+  "Origins": "http://localhost:4200"
 }
